# hub-identities

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: cargo.yml  cargo_test.yml  main.yaml  post.yaml  release.yaml
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/src/graphql/: mod.rs  schema.rs
api/src/graphql/dataloader/: user.rs
api/src/graphql/object/: credential.rs  member.rs  mod.rs  owner.rs  user.rs
api/src/graphql/objects/: credential.rs  member.rs  mod.rs  owner.rs  user.rs  webhook.rs
api/src/graphql/query/: credential.rs  member.rs  mod.rs  owner.rs  user.rs  webhook.rs
core/: Cargo.toml
core/src/: lib.rs
kratos/: identity.schema.json
ory/: Cargo.toml
ory/src/kratos/: client.rs
src/: main.rs
