[package]
name = "hub-identities"
authors = ["Holaplex Engineering <engineering@holaplex.com>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "api", "core", "ory"]

[dependencies]
anyhow = "1.0.66"
hub-identities-api = { path = "api" }