[package]
name = "holaplex-hub-identities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ory = { path = "./../ory" }
async-graphql = { version = "5.0.4", features = [
  "chrono",
  "uuid",
  "log",
  "dataloader",
  "apollo_tracing",
] }
poem = "1.3.50"
async-graphql-poem = "5.0.3"
async-std = { version = "^1", features = ["attributes", "tokio1"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.1.0"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = []
