[package]
name = "ory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.29"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.151"
serde_json = "1.0.89"
tokio = { version = "1", features = ["full"] }
