[package]
name = "ory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive", "env"] }
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.151"
serde_json = "1.0.89"
tokio = { version = "1", features = ["full"] }
